changes to events

--- a/_pages/conferencess.html
+++ b/_pages/conferencess.html
@@ -1,7 +1,7 @@
 ---
-title: Reports
+title: Conference presentations
 layout: default
-permalink: /conferencepresentations/
+permalink: /conferences/
 ---
 <section class="wp-section" id="wp">
   <div class="container">
@@ -10,7 +10,7 @@ permalink: /conferencepresentations/
 
       <!-- Section Header -->
       <header class="col-md-12 col-md-push-2 col-sm-12 section-header">
-        <h2>Conference - Presentations</h2>
+        <h2>Conference presentations</h2>
         <hr class="normal">
       </header>
     </div>
