--- a/_pages/journals.html
+++ b/_pages/journals.html
@@ -1,7 +1,7 @@
 ---
-title: Publications
+title: Journal publications
 layout: default
-permalink: /journalpublications/
+permalink: /journals/
 ---
 <section class="wp-section" id="wp">
   <div class="container">
@@ -10,7 +10,7 @@ permalink: /journalpublications/
 
       <!-- Section Header -->
       <header class="col-md-12 col-md-push-2 col-sm-12 section-header">
-        <h2>Journal - Publications</h2>
+        <h2>Journal publications</h2>
         <hr class="normal">
       </header>
     </div>
