changes to academics

--- a/_pages/academics.html
+++ b/_pages/academics.html
@@ -47,6 +47,24 @@ permalink: /academics/
                 </a> 
                 (2022) by Vasilios Panagiotopoulos; Thesis supervisor Lagaros, Nikos
               </li>
+              <li>
+                <a href="https://zenodo.org/record/6590946#.Y-iKg61BxD8" target="_blank">
+                  Optimization of Vierendeel-type steel structure by means of nonlinear numerical analyses
+                </a> 
+                (2022) by Lyristis, Sevastianos; Thesis supervisor Gantes, Charis
+              </li>
+              <li>
+                <a href="https://zenodo.org/record/7629794#.Y-iKqq1BxD8" target="_blank">
+                  Critical Evaluation of the Provisions of CEN/TR 1993-1-103 Regarding Buckling Length of Steel Members
+                </a> 
+                (2022) by Leonidas Taliadouros; Thesis supervisor Gantes, Charis
+              </li>
+              <li>
+                <a href="https://zenodo.org/record/7629734#.Y-iKmK1BxD8" target="_blank">
+                  Design of Deployable Shelters for Emergency Response
+                </a> 
+                (2023) by Georgios D. Pantazis; Thesis supervisor Gantes, Charis
+              </li>
             </ul>
           </dd>
           <dt>PhD Theses</dt>
