--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ features:
    img: /assets/imgs/carousel/idonial.jpg
    link: #
  - title: Politecnico Di Torino
-   text: Text for here
+   text: 
    img: /assets/imgs/carousel/politecnico_di_torino.jpg
    link: #
  - title: University of Cyprus
