changes to journals

--- a/_pages/journals.html
+++ b/_pages/journals.html
@@ -39,6 +39,8 @@ permalink: /journals/
               <li>NLFEA of Sulfate-Damaged Circular CFT Steel Columns Confined with CFRP Composites and Subjected to Axial and Cyclic Lateral Loads <a href="https://www.mdpi.com/2075-5309/12/3/296" target="_blank">(2022)</a></li>
               <li>Artificial Intelligence (AI) Applied in Civil Engineering <a href="https://www.mdpi.com/2076-3417/12/15/7595" target="_blank">(2022)</a></li>
               <li>Constructions with 3D printing. Innovative technological capabilities in the construction industry <a href="https://zenodo.org/record/6785722#.Y934W61BxD8" target="_blank">(2022)</a></li>
+              <li>Enhanced Multi-Strategy Particle Swarm Optimization for Constrained Problems with an Evolutionary-Strategies-Based Unfeasible Local Search Operator <a href="https://zenodo.org/record/7713403#.ZClTvXZBxD9" target="_blank">(2022)</a></li>
+              <li>Size and Shape Optimization of a Guyed Mast Structure under Wind, Ice and Seismic Loading <a href="https://zenodo.org/record/7713364#.ZClT33ZBxD9" target="_blank">(2022)</a></li>
             </ul>
           </dd>
           <dt>2023</dt>
@@ -46,6 +48,7 @@ permalink: /journals/
             <ul>
               <li>Cyclic Behavior of FRP Strengthened Beam-Column Joints under Various Concrete Damage Levels <a href="https://www.mdpi.com/2673-7108/3/1/4" target="_blank">(2023)</a></li>
               <li>Optimisation driven design in architectural, engineering and construction industry <a href="https://www.icevirtuallibrary.com/doi/abs/10.1680/jstbu.22.00032" target="_blank">(2023)</a></li>
+              <li>Acoustic Emission and Artificial Intelligence Procedure for Crack Source Localization <a href="https://zenodo.org/record/7713434#.ZClTpnZBxD9" target="_blank">(2023)</a></li>
             </ul>
           </dd>           
         </dl>
