changes to conferences and reports

--- a/_pages/conferences.html
+++ b/_pages/conferences.html
@@ -30,6 +30,17 @@ permalink: /conferences/
           <dd>
             <ul>
               <li><a href="https://zenodo.org/record/7598395#.Y9uI9K1BxD8" target="_blank">Estimation of Friction Capacity of Driven Piles in Sand: Effect of Sand Dilation</a>, presented at the Conference <a href="https://www.just.edu.jo/cesare22/Pages/home.aspx" target="_blank">CESARE'22</a> 3rd Coordinating Engineering for Sustainability And Resilience, May 6th - May 9th, 2022, Irbid, Jordan, ISSN:2788-6204 </li>
+              <li><a href="https://doi.org/10.5281/zenodo.7713156" target="_blank">Damaging configurations in arch structures with variable curvature and tapered cross-section</a></li>
+              <li><a href="https://doi.org/10.5281/zenodo.7713121" target="_blank">Ground Penetrating Radar Fourier Pre-processing for Deep Learning Tunnel Defects' Automated Classification</a></li>
+              <li><a href="https://doi.org/10.5281/zenodo.7713082" target="_blank">Structural Health Monitoring with Artificial Neural Network and Subspace-Based Damage Indicators</a></li>
+              <li><a href="https://doi.org/10.5281/zenodo.7713060" target="_blank">Estimation of distribution algorithm for constrained optimization in structural design</a></li>
+              <li><a href="https://doi.org/10.5281/zenodo.7713005" target="_blank">Advanced deep learning comparisons for non-invasive tunnel lining assessment from ground penetrating radar profiles</a></li>
+            </ul>
+          </dd>
+          <dt>2023</dt>
+          <dd>
+            <ul>
+              <li><a href="https://doi.org/10.5281/zenodo.7713034" target="_blank">Optimization as a Tool for Seismic Protection of Structures</a></li>
             </ul>
           </dd>
         </dl>
