--- a/_pages/reports.html
+++ b/_pages/reports.html
@@ -19,7 +19,14 @@ permalink: /reports/
        
       <!-- Section Content -->
       <div class="col-md-12 col-md-push-2 col-sm-12 section-content">
-       
+        <dl>
+          <dt>2021</dt>
+          <dd>
+            <ul>
+              <li><a href="{{site.baseurl}}/assets/reports/Fragkoudakis-Karampatsis.pdf" target="_blank">On determining the outer shell of a unit cube complex</a>, by Christodoulos Fragkoudakis and Markos Karampatsis</li>
+            </ul>
+          </dd>
+        </dl>
       </div>
   </div>
 </section>
