--- a/_pages/academics.html
+++ b/_pages/academics.html
@@ -65,6 +65,18 @@ permalink: /academics/
                 </a> 
                 (2023) by Georgios D. Pantazis; Thesis supervisor Gantes, Charis
               </li>
+              <li>
+                <a href="{{site.baseurl}}/assets/papers/RDS_GR01-1.pdf" target="_blank">
+                  Bahay Cono - Rapidly Deployable Shelter - WS22/23
+                </a> 
+                (2023) by Eman Pagala, Weifeng He, Keiya Nakazato; Teaching Assistant: Moon Young Jeong (ILEK), Supervisor: Jun. Prof. Dr.-Ing. Maria Matheou (ILEK)
+              </li>
+              <li>
+                <a href="{{site.baseurl}}/assets/papers/RDS_GR02-2.pdf" target="_blank">
+                  Rapidly Deployable Shelter, Winter 2022-2023
+                </a> 
+                (2023) by Sara Salkic, Wiona Schäfer; Supervision: Jun-Prof. Maria Matheou, Moon Young Jeong                
+              </li>
             </ul>
           </dd>
           <dt>PhD Theses</dt>
