--- a/_pages/reports.html
+++ b/_pages/reports.html
@@ -26,6 +26,12 @@ permalink: /reports/
               <li><a href="{{site.baseurl}}/assets/reports/Fragkoudakis-Karampatsis.pdf" target="_blank">On determining the outer shell of a unit cube complex</a>, by Christodoulos Fragkoudakis and Markos Karampatsis</li>
             </ul>
           </dd>
+          <dt>2023</dt>
+          <dd>
+            <ul>
+              <li><a href="{{site.baseurl}}/assets/reports/USTUTT_Report 1-2.pdf" target="_blank">Bahay Cono, Philippines</a>, by Eman Pagala, Weifeng He, Keiya Nakazato, Teaching Assistant: Moon Young Jeong (ILEK), Supervisor: Jun. Prof. Dr.-Ing. Maria Matheou (ILEK)</li>
+            </ul>
+          </dd>
         </dl>
       </div>
   </div>
