--- a/_pages/workshops.html
+++ b/_pages/workshops.html
@@ -42,7 +42,7 @@ permalink: /workshops/
           <li>Dr. Panayiotis Dimitriadis, National Technical University of Athens</li>
           <li>Dr. Theano Iliopoulou, National Technical University of Athens</li>
           <li>Dr. Romanos Ioannidis, National Technical University of Athens</li>
-          <li>Evi Frangeda>ki (PhD candidate), National Technical University of Athens</li>
+          <li>Evi Frangedaki (PhD candidate), National Technical University of Athens</li>
           <li>Michalis Chiotinis (PhD candidate), National Technical University of Athens</li>
           <li>Antonis Christofides (PhD candidate), National Technical University of Athens</li>
           <li>Stavroula Sigourou (PhD candidate), National Technical University of Athens, National Observatory of Athens</li>
